client/vite-project/src/components/delete-modal/DeleteModal.module.scss
.delete__modal__container {
    display: flex;
    align-items: center;
    justify-content: center;
    // TODO; modal does not cover the full heigh of the page if the page has been scrolled.
    height: 100%;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.9);
    position: absolute;
    top: 0;
    left: 0;
    margin: 0;
}

.delete__modal__content__wrapper {
    width: 70vw;
    max-width: 400px;
    background-color: rgb(243, 243, 243);
    border-radius: .1rem;
    padding: 2rem;
}

.delete__modal__heading {
    font-size: .95rem;
    font-weight: 300;
    padding: 1rem;
}

.delete__modal__buttons__wrapper {
    display: flex;
    justify-content: end;
    gap: 2rem;
}

.delete__modal__approve__btn,
.delete__modal__reject__btn {
    all: unset;
    font-size: .6rem;
    font-weight: 400;
    cursor: pointer;
    padding: .3rem 1.3rem;
    border-radius: .1rem;
    transition: background-color .3s;
    color: white;
}

.delete__modal__approve__btn {
    background-color: rgb(162, 20, 20);
    color: rgb(239, 239, 239);

    &:hover {
        background-color: rgb(172, 0, 0);
        color: rgb(208, 208, 208);
    }
}

.delete__modal__reject__btn {
    background-color: rgb(8, 67, 8);

    &:hover {
        background-color: rgb(14, 98, 11);
    }
}

.loader__container {
    background-color: rgb(243, 243, 243);
    border-radius: .5rem;
    padding: 2rem;
}

.delete__modal__success_modal__wrapper {
    background-color: white;
    // TODO: this padding is bad, it just covers an issue - remove it, make sure to show success modal and you'd see the border radius issue
    // FIX IT
    border-radius: .1rem;
}

